# Learn_OpenGL

./: CMakeLists.txt  README.md  imgui.ini
shader/: simple.fs  simple.vs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  vertex_layout.cpp  vertex_layout.h
